@@ -1,0 +1,136 @@
+#----------------------------------------------------------------------
+# This file was generated by /usr/bin/img2py
+#
+from wx.lib.embeddedimage import PyEmbeddedImage
+
+Main = PyEmbeddedImage(
+    "iVBORw0KGgoAAAANSUhEUgAAAIAAAAB6CAYAAAB3N1u0AAAABHNCSVQICAgIfAhkiAAAAAlw"
+    "SFlzAAAGtQAABrUBXo2HFwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoA"
+    "ABmzSURBVHic7Z15fFvVte+/52iwZEm2ZSfORAgZCc7AzQRJW0rLlDKH4TGTknKBtsDlto9X"
+    "7gOeeTGUvAClXCBAGlooXDoAbRnCcCmltEDCFBLIRAIJmZzYIYkn2ZZkSfv9sXSkI0Wy5USW"
+    "5OHnz/lYZ5999jnS+u291157rb01pRQD6D/w1rgdwK+BGcDN1jy/zwByj5uAy6KfF+n5fJMB"
+    "5BbeGrcO/MiU1DBAgP6Fs4FRpvPHBwjQv3CD6fPXwB8HCNBP4K1xTwRONiU93lDtCwwQoP/g"
+    "ekCLfg4DjwIMEKAfwFvj9gDfNyW92FDt2wkDBOgv+AHgMZ0/bHzQBgxBfRveGrcd2AqMiCZt"
+    "aKj2TTKuD7QAfR8LiAsf4B7zxQEC9GF4a9xW4BZT0lfAM+Y8AwTo27gMGG06X9xQ7QuZMwwQ"
+    "oI8iava91ZRUCzyRnG+AAH0XFwJHm87vbaj2BZMzDRCgD8Jb49aA20xJe4Ffpco7QIC+ifOB"
+    "qabz+xuqfe2pMg4QoI/BW+O2AYtMSQ3AI+nyDxCg7+E6YLzp/P81VPta0mUeIEAfgrfGXQJU"
+    "m5J2AA92ds8AAfoWbgEGm85vb6j2+Tu7YcAnMA4PUA54ASdgB2zR//ZonmD06Ij+b0f62ANA"
+    "2mY2F/DWuEcAPzElrQb+q6v7+isBrIhr1FhgCCJ0KzJfrgOW6GfNlAYQAZTpCJvSQggZ6oEt"
+    "wPZoWq5wJ0JcAz9rqPZ1OdPXn2YDHcAYYBxwFIm124oI3VwhQkhNN/4Tvcdq+m/OG47+N7cS"
+    "2xAybEVaix6Bt8Y9BVhDnKivN1T7Ts/k3r7eApQgAh8LHIEIuQghgx2pvXuBRqA5ejQhwuqq"
+    "ZmhIjSuJHqXRYwgiiCDSrUxAyFGLkOHL6DO6xOiFmuMAzqm6rk1WEW2HwvJJ0x1NB1JkXUxi"
+    "K/WzTMqHvtsCjAXmAJWI0B2I4O1AANgJ7AJ2k/1m2gIMA45ESOdAyBAA/AgZ9gIrEULEMHqh"
+    "5mjS3AuUUsehMR2o4uBKug3UKg1tlWaJ/FckrE8A3jRdf6Kh2veDTF+2rxFgOPBtZP67GKmh"
+    "VqRm74weX9N17c4WNEQrH4kQwoMQrh1oQ1qFfwK7S+90zdKU9lsNjulG+c2AD/neRMsd31Dt"
+    "q820gL7SBXiBE5Dm3gm4kZq2DumHm/P0Xgqp7XuBVUgXMQoRcjHgaA21jjzvqXNmWpR2vuq+"
+    "PIzux8AvuiN86P0EcCFN/WTigteBjYjwD5r9yjOagM+Q95u0qvajOVc+e/mFe1p2V5ozWYJe"
+    "HA3HUtQ0EXvzROy+MYQcdQRKPydY8jn+svV0uLYnlx3W4OPuvlBv7QJswCwkwNFQxGxIn7oG"
+    "aV4LGq3BVn3SAxOebPI3TYunanh2nYX3i2vRw870N6NoOWI5DeOXEbEkfNVGiyUyed9tbX26"
+    "CygF5iEKnhshwE7E8NGYx/fqFuY+cfLlZuFb24cyaOP/xHFgWme3RaHh2XU2zn3Hsa/qPvzl"
+    "q40LZZGw/mvge5m+R28zBY8ELkeUnkFAK/A68Hd6kfDvfvvuURvqN9xknFuCXoZ9uCRD4cdh"
+    "9Q9h6Cf3UPz1N2JpCuaW1biuybSM3tQFTAVOQjRpD7ABUax6zRcA2Nu61zLtoalPtQV9sfn6"
+    "yk9rEoTYXYTtB6idczURW8wa3YIlPKXhtvaDFIVk9IYWQEdi2k5FtH0X8B6i8PQq4QP8x2s/"
+    "m24WvnvPqYclfABLsJyKTTeakzyErQsyubfQCeAALgCmIRM1GvDfJBlQehM27d8YH+crnfLN"
+    "P85Kua66kyhqMpsQ1MxM7itkAlQg/f1opL9vAZYjhpxei70te2NROfbWUegdns6ydwtFjZPN"
+    "p7MyuadQCeAFLkHs6hWIlv86vWB41xV8geYq47O9+ejOsnYbRS1mRyAqK35ePLKrewqRAEXI"
+    "MK8EKAM+Bf5BbqdWewTv73rf5Q8HYit0FGWZAPbmCQnnkZCly1ag0AigAWci9vMyxGr2WV7f"
+    "KIt4fdMrw4jH6GNtG95J7u7D6h9qLh40NTpt5igKjQDfRubsvUizvya/r5NdLJjxr9s1TTN8"
+    "C+jwbM1q+WIejg+MlGJtV/cUEgEmATORmt8MvJvf18k+RpWN6nBanV8a54GSz7NafqBkU8K5"
+    "wtLl3EChEGA4cApi4FHAW/SBPj8VSh2l643PyQI7XARLNpvOtK1pnEcSUAgE8ADnIHZ9B2LW"
+    "bc3rG/UghriHbjA+h5x1dLh2ZKVcpYXwe2NzAmhKZTQzmG8CaIjwy5BJnveRufM+i5kjZ60z"
+    "n++ruhe0yGGX2zT6GTqK45OASueDTO7LNwEmAUMRAmxE/OX6NO793v0bB7kGv2KcB0o30nTk"
+    "84dVZtCzhabRvzcnbbNFilMGgyYjnwSwAt9AbPttyMROv8CSeUvvtuq2mEWzceyTBN1fHVJZ"
+    "EUs7+6ruQWkxlUl5ikqu3XvHXl8m9+eTANMRY48LGe4dfjvYS3Da2NOaTx570v81zpUeZM+s"
+    "G2ke+QLdmd/yl69m9+xrCHriUyPfOuqEFTtu2Z2R8CF/08EO4GrE4BMAXs7HS+QbE+8fd2e9"
+    "r26eOc3RMJVBG27G2p7eSBSxtNEwfhktRyzHTJhyp3f/x9evWeotrqhDloTv0nSeLwKcCByH"
+    "EOBNxD273+HjXR8XX/i7efc1+RtPSLyiYWsbgb15AkXNE7D5RhNy1hMs2UzAs5kO91aUnjhK"
+    "LrYVb1h02uJfzp+xYAKwD+lS/9bVO+TDJawE+Bdk+FdHPxU+wHs73vG2Bn0p3MAVHcW76Cje"
+    "RevQtzotQ0MLja0Yu/SVq95YVumqDCOjqTJgCvAJEq6WFvnQAb6JdAEO+pHil4zn1j5bvujv"
+    "d/0qFAkNMtJsFnu3XLqdNufma2Zdd+lH1695LCp8kN/UiH76Vldl5LoFqER84j2Iv/7+HD+/"
+    "ILByxwrXvy+/4bFAOHCkkVbqKHv34+tX37D4nUUTVu36cMru5rrJzYGmSf4O/1iFsgDYLfbd"
+    "niLPukHuyvUTKyauv/uMxauGu4YnW0z3IYGpw5GFIoYBe9K9S651gFMRe38p8CJ5DqnOB3Y2"
+    "7bB967HZjzYHmo830lx212evXvXG1VOHHntQLP/n+9YWPf7Bb8Z8a/SJdfOq5nXanJvgAc5F"
+    "4hDWAK+ly5hLAmjI8iXDEGvfP3L14EJBW7BVn/pg1b372/afZqQ5rI6ty87/zffPmnhOtr2a"
+    "T0Ra3HrgMdIMs3OpAwxDwqGKkKnefodZj0y71Sx8m8VWv/CUu67rAeGDLA/jQOImRqTLlEsC"
+    "jEOiczUkMrdfYeaSf/nR7ubdFxvnFt3SdP3sG6+79rgf1vXQI2sRI4ENiZZOiVwSYCxS++sp"
+    "vJi9HsV3l51w0Zb9X8bcf3VN91885ZLr7zi5pie9m4PIb+2gAAhQgXj5OOiFzf8jHzw4/JEP"
+    "Hjwk/61znz7ztDV7VsdW7dTQwqeOO+2nS85d+mn23jAtdiCVrhTxrD4IuVICj0eUkkHAnyjg"
+    "+f5XN71a+uSqZdO2HNg6eX/b/kmtQd+kUCTkBbDq1gaX3b2+orhi/djyMeuunPmDNWdPODtt"
+    "/73g+fnHvbjxL48qpYxFptTxI2ff/vqCN1/KyZcRnetCZGj4Dzh4ijhXBLgM0QE6KGC7/9zf"
+    "nHzuqt0f3RKORDJy1tc13Tdt+PR737z67T8nX7vy2UvnvLrplf+MqEgszPeYyqpfrPjhh09m"
+    "8ZUzwZlIK7CFpL0CIDddgBuZ8y9Y7f+ZT387ePS9Ix/+cNcHd2UqfICIirhX1X688Kh7jnj0"
+    "6VVPxGL8z3nqjLmvbFq+xCz8I8tGPZkH4UO8GxiCyCIBuWgBpgJzkYmf5ciaegWDs377vTPe"
+    "37HytrAKm1faQKEIE5FDyRDaoulYkEMzu18DFl1vOe6I2T9v62hzf7pnza2YKtcwz7DnP/23"
+    "DTU2iy0fM29liNfV10hYXYKbfS5MwYOizwnTxcRErvHDP18z/b3t7y7CJCyFol0FCabySTWJ"
+    "z44Vp2aPESEciXhW7lixCBKZcZT3qF+vvnHdAz3yBTJDI9L1WkmhCOaCAMYijC0UUDTvmrqP"
+    "nC9s/NNdmITfQZh2FSCSwWsGCRFSYZxaETYsRrJZ+KqqctJ97/3wg6ey+uKHhmbEBlOefCEX"
+    "OkAZQoCM1sbLFS77/RU3B8LBWOxcgA5alT8j4RuIoGhTfsIHW1nV8SNn31Ygwgf57a1IZUxA"
+    "TxPAgsz/FxQBLv/DJd/Y01J7kXEeJkK76r5tSkfHrTmxHPwzauXFFYWk6zQjMvAglsEYepoA"
+    "pUizaCF/S7UdhL9v/dtPzedtKtDtMmxY8GiOVMIH4O0tb/0k5YX8oAVi/VSp+UJPE8Bhek6n"
+    "y5bnCp/vW1vkD/ljcdR+OlI14Z3CgQ2X5kgYCYSJEDApjv6Qf/y6utWOVPfnAQHisrabL/Q0"
+    "AYzJH4gvuJxXLHlvydEKFfveIRXuLHsCNDRcWhEOLeE3pIMQPtVOh4oTQKH0h1c8UpVcRp5g"
+    "/PYa/Z0Aa+vXTTKfh8mMAFYseDQntqSBk18FaVWB6NrxiWWt+3ptwrPyiLQE6OlhYMERoM5X"
+    "F6uV4Qx1fqdmpyhRd0KhaFMBOkxCV9EyDb2gvqU+Yc2WPCJvBLARJ0BBRPv6Ai3jjM9d9f0W"
+    "dIq1ooMUvTARWlWASIr7zQTwBX3jD8qQHxi/vUaORwEh4sYfS2cZcwWHrSjmIKknmXMT8mHD"
+    "k2KI56eDFtWeUvjJZTqsjrTOmDmG8dsbO5vE0NMECBIngK2zjLlCRfGgjcZnSwpO6uh4NOdB"
+    "il6ECC2qHX8X9gJzmRXF5es6yZpLGC29IskZp6cJ0EGBEWBsxfhYfL4YKOI/QVGaWh+I1vpM"
+    "ugxzmzK+fHyhEMD47RVJuli/awEumnLpBvO5BR0dDbfmiE7uxBFB4VN+2lUwI2UxmTjnTblo"
+    "fZqsuYaZADltAYyHKZK0z3xhXtW8BpvFHuubnZodj+bEmtQdBAnRotoJZThM1NASug2bbq+7"
+    "aMpFhWIOthOviDklgGH/DyN26ILAmIqxfzA+a9E/AwpFq/LTpgKobkwMOTV7QgcwpnzM7zvJ"
+    "nmsYO6iAbDETQ08PAwNIiHKIJBt0vrB536aiUCjoRAIlEipAB+FuCx5kXsBu+imL7e7PXr/m"
+    "zSez8LrZQikiAz9JIeO58AdoQCJU8k6AC58577vvbPvHLcFwMGWgREiFuy38ImwJTb+GHvjR"
+    "7BtuK7OVFdKCFyXEN7ZMQK4IECJxc6Oc4t53Fh+5ZOVD/7vJ39hptKxTs2PDQpsKph3nG7Cg"
+    "49SKsCb1osdUVj14+3du33bYL51dlCCtcV4JYEeWg4m5hD/5yeOVL61/afK2xu1VNoslMK58"
+    "wvrLp81ff8bRZ2TFd+Czuk8dVz135TXbGr+6yuSaDYDD6vjye0efsWjl9hVnm1fpMGz+IcKE"
+    "VZhQ1C9QrkV9AjULViwHmZEqXZUvvfGDv3W5X2+OYWyf10qKaOxcOIUOBq4EKpuCTavPfGLu"
+    "9Nrm2uN8gZbJ5th4M+yWol0lRZ51x1RO+utL819541AeOu/ps05dseO9/9UR7hhmTtc13XfM"
+    "4GMefeHK5c8Mcg0OA5z/9DknvbP9n9WhSKjiUJ5l1a0Hvjnq23e+cOVLb3adO+eYiERk70U2"
+    "k05Yhi9XcQH/+t9fvDb9ppdvOKfeV582UDEVyovL37pr7uKaS6dcmtFaAne/fedRSz987NZm"
+    "f9Oc5GuVrsqX7zil5v7Ljr1iX/K1lze/XPaTl268dX/bvoz23DVQ4ap4Y/Hp9991QdUFBeXw"
+    "asKpiP5VCyxLvtjjBNCe0yyntJz42Ora1QvCKpxyPsChQVilny60aJbGOaO+cffL819LG+e+"
+    "cscK149euPbaHY3b5ytUQtfmtDk3nT3x3LuXnvf4J12976W/u/CEz/Z+dkKjv3lSe7DtaEWk"
+    "KOH7oAec9uJNZY6S9ZMqJ6149rK/vN1VmXmEHbgIGY5/gCzBm4AeJcDgewZ7Qv72N5EFoWIY"
+    "pME3rTDOohivwwhdBqnbI/BlGL6MaPwzBK1Jr1bpHvLipp9uud2ctrNph+2yP1x88edfb7zW"
+    "COEyYNEsLVVDJj308vxX/1jq6L5W3tjRqN/39uKxH+38sApg1sjjNtz8nVu2FJiG3xlGI8vE"
+    "7AWeQ4JEEtCjBChf6FmqNHWtOW2uDa62K4rTT8QBsE/Bg36NT5IMcTNHzPo/f7367y+0BVv1"
+    "858596zVuz+5PhgOJgduqiHuIS/eeeqiX/6PwrHG5QMnIhFB9cCjpFgkoscIUFrjnqvLNi+A"
+    "1PqbHIpp3ZwUfr0DHg9q+KOvqWu6b8aIGfesrVs73x/yj0vOX2wr3nDepAt+/vA5j/aZjSYO"
+    "ERbgYsTytwZ4NVWmHiFA+eLyUhUIrkO2T8cOPFisOOIQDc9vh+A+f+dNht1StHPmETMffuGK"
+    "5a/lKQSr0DAC2W5vLxKQm3Jt+h6xA6hA8JdEhQ9wuf3QhQ/wHSu8Y4UPUvgUWXXrvklDJi/9"
+    "/SXPPT/MM6wgvI4KBEciEz8dQNqFiLNOAG2hZi/TXJcb5xMtcF4W5gGvL1KsD2v4onVbQ4uM"
+    "GzR+yWPzlj09ffiM9sN/Qp+CFSGAH1mOJ60XS9ZnA0spnopp6vcKu8rKQ8o1ODexZY/87vJn"
+    "nxwQfkpMRnwA2oFOnVKyTgBd02NblWnA+Cw+4RiTAqlQ1ofefWBC+tz9Fk6gCokGqidN328g"
+    "6wRQqBgBhung6mK41x2M1xPDb9fuWVMogReFhGOj//3AP7vK3BMOIbE9a7NZ+0HINMJU5p7m"
+    "+gECJKIEWR62BVmKt8sNiXqCALGlUkqzWPsNlJnKDEQCB8W793NMR7T+ABnUfugBAmimzR6/"
+    "yrLBVCWV6XWUZ3fftd6NwYjm34Lsv5TRJtvZ1wGU9pHxeUsku0uC1EYS5weO8o7akD53v8NM"
+    "pN/3A+9lelP2uwAtEtuvrk3B7iy2Al8klXXGhDMGCCAYjbQALUgLnPFaDNkfBqrEpeDez6Jt"
+    "bkUorgBYdeuBq2ddV5+90nstyoE5iPBbSbEYZGfImiXQW+M+Hvh3NO1Cc/ozQY3ZVpWgvR8K"
+    "3g3BShOZSh0l/Xa3EROcwEmI4ucDXqGbC3EcFgG8NW4bshTpTchysAchCPwyoHGvU3USitk5"
+    "GhU8EojfrWt6609PuPm+Qyyur8ACfBex+B0A3kZ2CukWDokA3hp3BbL5w49Jvxb9bmTbEj4P"
+    "w1NBjfn27pMgADzg12g2KX9Thx9734+P/7d+u9lUFHOQ5n8fsvjj6s6zp0a3poO9Ne7JSG2/"
+    "gvj6P2b4EcfD/9SK7DvNU8IAVRb4SZFiWIbdwYawtB57TMpfaVHpym231F6b/q5+gcnANMTL"
+    "dxvwPIe48WaXLYC3xq0jCw7fhMwvp8IeYAmwtKHaF3O4rFjoviaixfer2RCGG9o05hcpTrGm"
+    "NxM3KvhzUOMvHYnDSF3Tff9x4q13dPmt+jZGIgafRoQAL3MYu66mbQG8Ne5K4CrgGmSl71RY"
+    "BTwA/LGh2pfSp7O8xnV2BO1XmiwYHX8wYtYdr8N4iyKo4IuIxuYwfJ3ilRxW5xfzp33/1sWn"
+    "3/d5ht+tL2Iw4uXrR/r9PyBdwCEjgQDR2n4qIvRzSB3SHQZeAB5oqPa9m8lDSheWlmuEl2ga"
+    "l3T3BXVNj8wYMetPy87/zaJRZaMKYp2hPGEM0u8HEC/fF4Gth1uoppTCW+M+AliA7Oc7Kk3e"
+    "JuBx4KGGal+3tU2AshrPBRrqUYTJXWKQa9Cee07/xYvnVV3QAqxHdsLsb+5eGtLfT0bG+i2I"
+    "e3dWfB61soWui5GNBNK5a36IbET8u4ZqX8a7UqfD6IWao1l3TlNYZqiImoHGdKBKQUiHTyNK"
+    "rdJ0VoG2av3NmxuGO4efiaw3XIaMLN6h/+w5ZAVOQBTpRqQSLieDWb5MoZUtdH3BwX18A6LN"
+    "L2uo9q3N1sPSYfRCzbENQuoOlcpuWIJsgjgUWey4DakBBbP0bA/BjRh53Ig8vka63qxuMaeV"
+    "LXQ9hozpQfaVWQb8qaHaVxBLu0ZhA04HJiAtAch0Z1+1BQwBvoM0/43Al4hbd9ZbPkMHmAPU"
+    "N1T7Dlup6GF8E7E4epCo17WIz1tf8Qa2Iu5cUxF/vhbgY6Tb6xHdJ9d7B2cDRyNb0LiR7iGI"
+    "KESbOYzxcJ6hIZ48xyL7+zQjEzt/BXp0xrM3EgDE6+gU4tvRuolHwKT1gS9QjEK0fA/yHdoQ"
+    "w9pbQE/tKhpDbyWAgQlI8GM5sviECzGQfELh6wdDEYveIKS2tyLv/i7SmuUEvZ0AID4NU4HZ"
+    "SC1yI9OkdUiLsDf9rXlBJfK+w5F+3of09e8jXVlOu7G+QAADdsQtagZCgJJoWhuyX+FOhBS5"
+    "1hN0pKsaGT2ciN7SjBBgFaLo5cW20ZcIYMCFmEyN6JgiZObSjjhO1CJkqKXnfnQbMk1+ZPS/"
+    "LfosP2LK7UBGLyvJ8za6fZEABlzIrtljEUFYETIYhFBI5EwtYmFrRprj7v4gGvERSQnStA+L"
+    "phsCDyBD1Z3IFq5bSFqwMV/oywQwwwYchZBhDNIM24i3DBZEYBFEMK1ILTUfRjnmw4UIX8fY"
+    "LyJe0zuQJv4rRODbKEATdn8hgBk60iwbrYOxgKUFaSWs0Txa9DA+gwg5Ev1vfA5FD2Mtkybi"
+    "tbyWArdN9EcCJKMYGUaWI3MNXqSFsCO13E482jlIPOY+iNTwhuhxIHokLMVa6Pj/tTc0KVb3"
+    "oJIAAAAASUVORK5CYII=")
+getMainData = Main.GetData
+getMainImage = Main.GetImage
+getMainBitmap = Main.GetBitmap
+getMainIcon = Main.GetIcon
+
