@@ -4,6 +4,7 @@
  - Bugfix: Notebook pages were drag'n'dropable
  - Update function now works in its own thread
  - Code cleanup: documentation of model functions
+ - Added program icon
 0.7.0
  - File import dialog was enhanced (#4, #5 - subsequently #7, #8):
     - Now there is only one "load data" dialog in the file menu.
